# spring26

./: .cursorrules  .gitattributes  .gitignore  Makefile  README.md  TODO.md  client-credentials.txt  codecov.yml  csci-e-11-config-template.toml  lab4.url  pyproject.toml  unsmash.py
e11-cli/: pyproject.toml
e11-cli/e11admin/: main.py
etc/e11/: Makefile  README.md  pyproject.toml
etc/e11-cli/: .cursorrules  .gitignore  ARCHITECTURE.md  CODE_REVIEW_FINDINGS.md  CODING_STANDARDS.md  Makefile  NOTES.md  README.md  TESTING.md  TESTING_STRATEGY.md  dynamodb-local-metadata.json  plot_grades.py  primitives.py  pyproject.toml
etc/e11-cli/.cursor/rules/: no-entity-references.mdc  prefer-exceptions.mdc
etc/e11-cli/_old/lambda-grader/: schema.md  template.yaml
etc/e11-cli/_old/lambda-s3watch/: Makefile  NOTES.md  samconfig.toml  (+1 more)
etc/e11-cli/doc/: .gitignore  CODE_ISSUES_FIXED.md  DIRECT_LOGIN_IMPLEMENTATION_PLAN.md  GIT_SIGNING_SETUP.md  GIT_SIGNING_STATUS.md  PROJECT_OVERVIEW.md  TODO.md
etc/e11-cli/e11/: __main__.py  doctor.py  e11_common.py  main.py  staff.py  support.py
etc/e11-cli/e11admin/: Makefile  pyproject.toml
etc/e11-cli/grader/: .samignore  Makefile  grader.py  requirements.txt  samconfig.toml  template.yaml
etc/e11-cli/grader-flask/: README.md
etc/e11-cli/home/: Makefile  home.py  oidc.py  samconfig.toml  template.yaml
etc/e11-cli/lambda-grader/: Makefile  README.md  grader.py  samconfig.toml
etc/e11-cli/lambda-home/: .gitignore  Makefile  README.md  STAGING.md  common.py  constants.py  example.json  home.py  notes.md  oidc.py  pyproject.toml  samconfig-prod.toml  samconfig-stage.toml  samconfig.toml  template-bottom.yaml  template-common.yaml  template-stage-top.yaml  template-stage.yaml  template-staging-bottom.yaml  template-top.yaml  template.yaml  tests.md
etc/e11-cli/lambda-leaderboard/: .gitignore  .pylintrc  BACKUP_DYNAMO_DB.txt  Makefile  README.md  pyproject.toml  requirements.txt  samconfig-prod.toml  template.yaml
etc/e11-cli/lambda-s3watch/: Makefile  README.md  samconfig.toml  server.py  template.yaml
etc/e11-cli/lambda-users-db/: Makefile  samconfig.toml  template.yaml
etc/e11-cli/test-docker/: Dockerfile
etc/e11-cli/tests/: conftest.py  conftest_lambda_home.py  test_assertions.py  test_context.py  test_decorators.py  test_e11_command.py  test_e11admin_canvas_grades.py  test_e11admin_ssh.py  test_e11admin_status.py  test_e11admin_student_log.py  test_e11admin_student_report.py  test_e11admin_user_id.py  test_highest_grade_selection.py  test_lab8.py  test_loader_lab0.py  test_main_commands.py  test_python_entry.py  test_render.py  test_support.py
etc/e11/e11/: __main__.py
etc/e11/grader/: Makefile  app.py  requirements.txt  template-chatgpt.yaml  template.grader.yaml  template.yaml
etc/e11/grader-flask/: pytest.ini  samconfig.toml
etc/e11/tests/: conftest.py  test_context.py  test_python_entry.py
lab1/: Makefile  README.md  cheats  create_log_db.py  pyproject.toml
lab1/s3watch/: Makefile  NOTES.md  samconfig.toml  template.yaml  template_old.yaml
lab1/s3watch/.aws-sam/: build.toml
lab1/s3watch/etc/: test.txt
lab1/s3watch/eventConsumer/: app.py
lab1/s3watch/handler/: app.py
lab3/: .gitignore  Makefile  README.md  lab3-nginx-patch  lab3.service  lab3.service-simple_flask_application  lab3.service-student_server  poetry.toml  pyproject.toml  sgarfinkel-le-ssl.conf  simple_flask_application.py  student_data.py  student_database.py  student_server.py  username.conf
lab3/etc/: setup-certbot-crontab.bash
lab5/: Makefile  README.md  eslint.config.js  lab5-nginx-patch  lab5.conf  lab5.service  notes.txt  package-lock.json  pyproject.toml  requirements.txt
lab5/app/: README.md  __init__.py  add.py  apikey.py  cors.py  db.py  image_controller.py  message_controller.py  rekognizer.py  schema_lab4.sql  schema_lab5.sql
lab5/app/static/: image_interaction.js  imageboard.js  messageboard.js  style.css
lab5/app/templates/: about.html  base.html  index.html
lab5/flaskr/: image_controller.py
lab5/healthcheck/: config.py  main.py  testlib.py  venv.py
lab5/healthcheck/checks/: apache.py  gunicorn.py  ip.py
lab5/server/: image_controller.py  image_validate.py  main.py  schema_lab5.sql
lab5/server/static/: todo.js
lab5/server/templates/: index.html
lab7/: Makefile  README.md  bounce.py  circuitpython_client.py  code_bounce.py  code_client.py  code_leaderboard_client.py  config.py  config_dist.py  eslint.config.js  lab7.conf  lab7.service  linux_client.py  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_cp.txt
lab7/app/: __init__.py  about.html  apikey.py  base.html  db.py  image_controller.py  imageboard.js  index.html  message_controller.py  messageboard.js  schema_lab4.sql  schema_lab5.sql  startup.js  style.css
lab7/app/static/: camera.js  imageboard.js  messageboard.js  startup.js  style.css
lab7/app/templates/: about.html  base.html  index.html
lab7/demos/: demo_beep.py  demo_beep2.py  demo_wifiscanner.py  hello_flasher.py  spinner.py
lab7/esp32/: config_dist.py  main.py
lab7/notes/: fonts.md
lab7_linux/: Makefile  linux_client.py  pyproject.toml
lab7_memento/: Makefile  README.md  code_bounce.py  notes.md  pyproject.toml  pyrightconfig.json
lab8/: Makefile  README.md  camera1.md  camera1.py  camera2.py  camera3.py  code_lab8.py  lab8-nginx-patch  lab8.service  post_dashboard.py  pyproject.toml
lab8/app/: apikey.py  schema_lab4.sql
lab8/app/static/: startup.js
lab8/app/templates/: base.html  camera.html  index.html
lab8/esp32/: config_dist.py  main.py  old_main.xx
lab8/memento/: code.py
lab8/server/: apikey.py  image_controller.py  image_validate.py  schema_lab4.sql  schema_lab5.sql
lab8/server/templates/: about.html
lab8/www/: camera.js  index.html
lab8_memento/: Makefile  camera1.py  camera2.py  camera3.py  pyproject.toml  requirements_cp.txt
lab_common/: Makefile  apikey.py  db.py  pyproject.toml
lab_common/static/: celeb.js.hold  lab4_messageboard.js  lab5_imageboard.js  lab6_imageboard.js  style.css
lab_common/templates/: index.html
(+308 files in other folders)
