[project]
name = "unsmash"
version = "0.1.0"
description = ""
authors = [
    {name = "Simson Garfinkel",email = "simsong@acm.org"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14.0"
dependencies = [
    "e11 @ file:./etc/e11-cli",
]

[tool.poetry.group.dev.dependencies]
ruff = "*"
ruff-lsp = "*"
pytest = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
