[project]
name = "e11admin"
version = "0.1.0"
description = "Admin commands for e11"
authors = [
    {name = "Simson Garfinkel",email = "simsong@acm.org"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3 (>=1.40.61,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.2"
djlint = "^1.36.4"
pyright = "^1.1.407"

