[tool.poetry]
name = "lab1"
version = "0.1.0"
description = "Lab 1 template files"
authors = ["Simson Garfinkel <simsong@acm.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
djlint = ">=1.36.4,<2.0.0"
pylint = "^4.0.2"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.407"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
djlint = "djlint:main"
