[project]
name = "lab5"
version = "1.0.0"
description = "Lab 5 server"
authors = [
    {name = "Simson Garfinkel",email = "simsong@acm.org"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "click (>=8.2.1,<9.0.0)",
    "boto3 (>=1.40.11,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
