[project]
name = "lab5"
version = "1.0.0"
description = "Lab 5 server"
authors = [
    {name = "Simson Garfinkel",email = "simsong@acm.org"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "click (>=8.2.1,<9.0.0)",
    "boto3 (>=1.40.11,<2.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
pylint = "^4.0.4"
djlint = "^1.36.4"
types-flask = "^1.1.6"

[tool.pylint.variables]
# Allow variable names that start with 'api_' or 'route_' to be unused
dummy-variables-rgx = "^(api_|route_).*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
