[project]
name = "lab6"
version = "1.0.0"
description = "Lab 7 Circuit Python and ESP32 tools"
authors = [
    {name = "Simson Garfinkel",email = "simsong@acm.org"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
             "circup",
             "adafruit-ampy",
             "pylint",
             "adafruit-blinka"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
