[project]
name = "lab6"
version = "1.0.0"
description = "Lab 7 Circuit Python and ESP32 tools"
authors = [
    {name = "Simson Garfinkel",email = "simsong@acm.org"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
             "circup",
             "adafruit-ampy",
             "pylint",
             "adafruit-blinka"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.8"
pyright = "^1.1.407"
circuitpython-stubs = "^10.0.3"

[tool.pylint.main]
ignored-modules = [
    "adafruit_display_shapes",
    "board",
    "digitalio",
    "displayio",
    "microcontroller",
    "busio",
    "wifi"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
