[project]
name = "lab6"
version = "1.0.0"
description = "Lab 7 Circuit Python and ESP32 tools"
authors = [
    {name = "Simson Garfinkel",email = "simsong@acm.org"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
             "circup",
             "adafruit-ampy",
             "pylint",
             "adafruit-blinka",
             "circuitpython-stubs (>=10.0.3,<11.0.0)"
]

[tool.poetry]
package-mode = false

[tool.pylint.basic]
good-names = ["VELOCITY_X", "VELOCITY_Y", "speaker"]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.8"
pyright = "^1.1.407"
circuitpython-stubs = "^10.0.3"
adafruit-circuitpython-pycamera = "^1.5.3"

[tool.pylint.main]
ignored-modules = [
    "adafruit_display_shapes",
    "board",
    "digitalio",
    "displayio",
    "microcontroller",
    "busio",
    "wifi",
    "vectorio",
]

[tool.pyright]
# Identify the environment
venvPath = "."
venv = ".venv"
reportMissingModuleSource = false
reportMissingImports = "warning"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
