[project]
name = "lab7"
version = "1.0.0"
description = "Lab 8 static web page checker"
authors = [
    {name = "Simson Garfinkel",email = "simsong@acm.org"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
djlint = "^1.36.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
