[project]
name = "lab8"
version = "1.0.0"
description = "Lab 8 Tools for MEMENTO"
authors = [
    {name = "Simson Garfinkel",email = "simsong@acm.org"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "circuitpython-stubs (>=10.0.3,<11.0.0)",
    "adafruit-circuitpython-neopixel (>=6.3.18,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyright (>=1.1.407,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
djlint = "^1.36.4"
pyright = "^1.1.407"
circuitpython-stubs = "^10.0.3"
adafruit-circuitpython-pycamera = "^1.5.3"

[tool.pylint.main]
ignored-modules = [
    "wifi",
    "socketpool",
    "adafruit_ntp",
    "bitmaptools",
    "displayio",
    "gifio",
    "rtc",
    "ulab.numpy",
    "adafruit_requests",
    "adafruit_pycamera"
]

[tool.pylint.basic]
good-names = ["photo_count", "free_bytes", "total_bytes"]

[tool.pylint]
disable = [
    "duplicate-code",
    "protected-access"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
# keep type checking on, but don't freak out about CP-only modules
typeCheckingMode = "standard"

# "wifi" and "socketpool" are stub-only modules -> suppress the missing-source warning
reportMissingModuleSource = "none"

# If you just want to shut up missing imports entirely (simplest for labs):
reportMissingImports = "none"
