[project]
name = "e11"
version = "0.1.0"
description = "CSCI E-11 command for managing submissions to grader and AWS infrastructure"
authors = [
    {name = "Simson Garfinkel",email = "simsong@acm.org"}
]
license = {text = "GPL"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3 (>=1.39.14,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
e11 = "e11.__main__:main"
