[tool.poetry]
name = "lambda-home"
version = "0.1.1"
description = "CSCI E-11 home page"
authors = ["Simson Garfinkel <simsong@acm.org>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [
    { include = "home_app", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
boto3 = "^1.40.71"
requests = "^2.32.5"
dnspython = "^2.8.0"
paramiko = "^4.0.0"
email-validator = "^2.3.0"
itsdangerous = "^2.2.0"
pyjwt = "^2.10.1"
jinja2 = "^3.1.6"
pydantic = "^2.12.4"
boto3-stubs = { version = "*", extras = ["essential", "route53", "secretsmanager", "dynamodb"] }

[tool.poetry.group.dev.dependencies]
djlint = "^1.36.4"
pylint = "*"
pyright = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"
boto3-stubs = "^1.40.71"
mypy-boto3-route53 = "^1.40.57"
flask = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
profile = "jinja"
ignore = ["jinja-block", "jinja-variable", "J004", "J018"]
extend_exclude = "node_modules/**,.venv/**"
indent = 4

[tool.pylint]
# Specify the Python version Pylint should assume for syntax checking.
py-version = "3.13"
ignore-paths = [
    "src/home_app/e11/.*"
]
source-roots = [".."]

[tool.pylint.FORMAT]
max-line-length=200

[tool.pylint.messages_control]
# Disable specific messages by their symbolic name or message ID.
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "line-too-long",
    "unspecified-encoding",
    "too-few-public-methods"

]

[tool.pylint.design]
# Set the maximum number of arguments for a function.
max-args = 10

# Set the maximum number of public methods in a class.
max-public-methods = 20

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
include = ["src"]
exclude = [
  "**/build",
  "**/.aws-sam",
  "**/.venv",
  "**/.mypy_cache",
  "**/.pytest_cache",
  "**/__pycache__",
]
typeCheckingMode = "basic"
reportMissingTypeStubs = "warning"

[[tool.pyright.executionEnvironments]]
root = "."
extraPaths = ["src", "src/home_app", "src/home_app/e11.whl", "../"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
 "src",
 "tests",
 "../",
 "src/home_app/e11.whl"]
addopts = "-ra -q"
