[tool.poetry]
name = "lambda-leaderboard"
version = "0.1.1"
description = "CSCI E-11 Leaderboard"
authors = ["Simson Garfinkel <simsong@acm.org>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [
    { include = "leaderboard_app", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
boto3 = "^1.40.71"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.6"
pydantic = "^2.12.4"
boto3-stubs = { version = "*", extras = ["essential", "route53", "secretsmanager", "dynamodb"] }
flask = "^3.1.2"
apig-wsgi = "^2.20.0"
paramiko = "^4.0.0"
pylint = "^4.0.4"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"

[tool.poetry.group.dev.dependencies]
boto3-stubs = {extras = ["route53"], version = "^1.41.5"}
djlint = "^1.36.4"
mypy-boto3-dynamodb = "^1.40.56"
mypy-boto3-route53 = "^1.40.57"
mypy-boto3-secretsmanager = "^1.40.60"
mypy-boto3-ses = "^1.40.60"
pydantic = "^2.12.4"
pyright = "^1.1.407"
requests = "^2.32.5"
ruff = "*"
types-requests = "^2.32.4.20250913"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
profile = "jinja"
ignore = ["jinja-block", "jinja-variable", "J004", "J018"]
extend_exclude = "node_modules/**,.venv/**"
indent = 4

[tool.pylint]
# Specify the Python version Pylint should assume for syntax checking.
py-version = "3.13"
ignore-paths = [
    "src/leaderboard_app/e11/.*"
]
source-roots = [".."]

[tool.pylint.FORMAT]
max-line-length=200

[tool.pylint.messages_control]
# Disable specific messages by their symbolic name or message ID.
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "line-too-long",
    "unspecified-encoding",
    "too-few-public-methods"
]

[tool.pylint.design]
# Set the maximum number of arguments for a function.
max-args = 10

# Set the maximum number of public methods in a class.
max-public-methods = 20

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
include = ["src"]
exclude = [
  "**/build",
  "**/.aws-sam",
  "**/.venv",
  "**/.mypy_cache",
  "**/.pytest_cache",
  "**/__pycache__",
]
typeCheckingMode = "basic"
reportMissingTypeStubs = "warning"

[[tool.pyright.executionEnvironments]]
root = "."
extraPaths = ["src", "src/leaderboard_app", "src/leaderboard_app/e11.whl", "../"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
 "../",
 "src",
 "tests",
 "src/leaderboard_app/e11.whl"]
addopts = "-ra -q"
markers = [
    "docker: marks tests as requiring Docker environment"
]
